test/corpus/types.txt
================
Type declaration
================

type basic_t;
type basic_exec_t;

---

(source_file
    (type_declaration
        (identifier
            (word)))
    (type_declaration
        (identifier
            (word))))

